[tool.poetry]
name = "cert-management"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cryptography = "^42.0.8"
typer = {extras = ["all"], version = "^0.12.3"}
rich = "^13.7.1"
onepassword = {git = "ssh://git@github.com/1Password/onepassword-sdk-python.git", rev = "v0.1.0-beta.9"}
python-decouple = "^3.8"

[tool.poetry.scripts]
cert-management =  "cert_management.main:app"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
isort = "^5.13.2"
taskipy = "^1.13.0"
ruff = "^0.4.9"

[tool.taskipy.tasks]
lint = "ruff check --diff . "
lint-fix = "ruff check --fix ."
test = "pytest -s -x --cov=cert_management -vv"
post_test = "coverage html"
publish = "poetry publish -u __token__ -p $TOKEN_PIP"
docs = "mkdocs serve"

[tool.poetry.group.doc.dependencies]
mkdocs = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
