[tool.poetry]
name = "cert-management"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cryptography = "^42.0.8"
typer = {extras = ["all"], version = "^0.12.3"}
rich = "^13.7.1"
onepassword = {git = "ssh://git@github.com/1Password/onepassword-sdk-python.git", rev = "v0.1.0-beta.9"}
python-decouple = "^3.8"

[tool.poetry.scripts]
cert-management =  "cert_management.main:app"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
isort = "^5.13.2"
taskipy = "^1.13.0"
pytest-asyncio = "^0.23.5"
black = "24.4.2"

[tool.taskipy.tasks]
lint = " black . --check --diff .  &&   isort --check --diff ."
lint-fix = "black . && isort  ."
test = "pytest -s -x --cov=cert_management -vv"
post_test = "coverage html"
publish = "poetry publish -u __token__ -p $TOKEN_PIP"
docs = "mkdocs serve"

[tool.poetry.group.doc.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.27"
mkdocstrings = "^0.25.1"
mkdocstrings-python = "^1.10.5"
mkdocs-macros-plugin = "^1.0.5"
jinja2 = "^3.1.4"

[tool.pytest.init_options]
pythonpath = "."

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 79